--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <p id="sliderValue"></p>
     <div class="buttons">
-      <button onclick="startDisplaying(['Sa', 'Re', 'Ga', 'Ma', 'Pa', 'Dha', 'Ni'])" class="button">Begin</button>
+      <button onclick="startDisplaying(['S', 'R', 'G', 'M', 'P', 'D', 'N', 'n', 'd', 'p'])" class="button">Begin</button>
       <button onclick="stopDisplaying()" class="button">Pause</button>
     </div>
   </div>
