--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body onload="initialize()">
   <div class="container">
-    <p id="output">Sa</p>
+    <p id="output">S</p>
     <div class="slider-label">
       <input type="range" min="100" max="3000" value="1000" step="100" id="slider" onchange="updateInterval()" disabled class="slider">
     </div>
